--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     style="background:  url('public\img\header-bg (2).jpg') no-repeat center center/cover">
     <nav class="flex justify-between items-center  px-6 py-4 ">
       <div class="relative">
-        <img src="public\img\Polygon 1.png" alt="logo" class="width-150 h-13 mt-10 ml-9 mr-5 mb-[-50px] ">
+        <img src="public/img/Polygon 1.png " alt="logo" class="width-150 h-13 mt-10 ml-9 mr-5 mb-[-50px] ">
         <div class="ml-8 mt-5  absolute top-7 left-6 text-3xl font-extrabold text-indigo-900">
           Skilline
         </div>
