--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#" class="text-black ">Careers</a>
         <a href="#" class="text-black ">Blog</a>
         <a href="#" class="text-black ">About Us</a>
-        <a href="#" class="bg-white px-6 py-2 ml-[-1px] rounded-full leading-[1] text-black font-semibold">Login</a>
+        <a href="./login.html" class="bg-white px-6 py-2 ml-[-1px] rounded-full leading-[1] text-black font-semibold">Login</a>
         <a href="#" class="bg-[#F48C06] text-white ml-[-25px] px-4 py-2 leading-[1] rounded-full font-semibold">Sign
           Up</a>
       </div>
