--- a/utiliti.html
+++ b/utiliti.html
@@ -11,23 +11,169 @@
 
 <body>
 
-    <main class="px-10 py-10px ">
-        <div class=" mt-10 mb-10 grid grid-cols-1 p-10 gap-3 md:grid-cols-6">
+    <main class="py-2 px-0  bg-white text-white">
+        <div class=" py-10 px-6 grid grid-cols-1 md:py-20 md:px-30 gap-5 md:grid-cols-6">
 
-            <div class="h-104 w-full md:col-span-2 md:row-span-3">1</div>
-            <div class="h-35 w-full md:col-start-3">2</div>
-            <div class="h-35 w-full md:col-start-4">3</div>
-            <div class="h-35 w-full md:col-start-5">4</div>
-            <div class="h-35 w-full md:col-start-6">5</div>
-            <div class="h-65 w-full md:col-span-3 md:row-span-2 md:col-start-3 md:row-start-2">6</div>
-            <div class="h-65 w-full md:row-span-2 md:col-start-6 md:row-start-2">7</div>
-            <div class="h-45 w-full md:col-span-2 md:row-start-4">8</div>
-            <div class="h-45 w-full md:col-start-3 md:row-start-4">9</div>
-            <div class="h-45 w-full md:col-span-2 md:col-start-4 md:row-start-4">10</div>
-            <div class="h-45 w-full md:col-start-6 md:row-start-4">11</div>
-            <div class="h-35 w-full md:col-span-3 md:row-start-5">12</div>
-            <div class="h-35 w-full md:col-start-4 md:row-start-5">13</div>
-            <div class="h-35 w-full md:col-span-2 md:col-start-5 md:row-start-5">14</div>
+            <div
+                class="rounded-xl h-104 w-full md:rounded-3xl p-10  md:col-span-2 md:row-span-3 bg-gradient-to-tr from-violet-700 via-purple-600 to-fuchsia-600">
+                <div
+                    class="rounded-full md:mr-70 border-4 border-black w-28 h-28 flex items-center justify-center overflow-hidden mb-6 mx-auto">
+                    <img alt="pofil" class="w-full h-full object-cover" height="144" src="public\img\profil.jpeg"
+                        width="144" loading="lazy" />
+                </div>
+                <h1 class="text-center text-3xl md:text-2xl font-bold text-white md:ml-30 md:mt-[-110px]">Naufal Asila
+                </h1>
+                <p class="text-center md:ml-16 mt-2">11-05-2006 </p>
+                <p class="text-center text-[15px] font-medium md:mt-14 md:text-start mt-4">Front-end Developer</p>
+                <div class="flex justify-center md:justify-start items-center space-x-3 mt-4">
+                    <div class="h-6 w-14 rounded-3xl bg-gray-300/25 backdrop-blur-2xl flex justify-center items-center">
+                        <p class="font-medium">React</p>
+                    </div>
+                    <div class="h-6 w-20 rounded-3xl bg-gray-300/25 backdrop-blur-2xl flex justify-center items-center">
+                        <p class="font-medium">Node.js</p>
+                    </div>
+                </div>
+
+            </div>
+            <div
+                class="rounded-xl h-35 w-full  md:rounded-3xl md:col-start-3 bg-gradient-to-br from-fuchsia-600  to-violet-600 ">
+                <p class="text-center mt-6 text-3xl ">🖥️</p>
+                <h1 class="text-center text-[19px] font-medium text-white "> Available</h1>
+                <p class="text-center">for work</p>
+
+
+
+            </div>
+
+
+
+
+            <div
+                class="rounded-xl h-35 w-full  md:rounded-3xl md:col-start-4 bg-gradient-to-bl from  from-fuchsia-600 to-violet-600 ">
+                <p class="text-center text-3xl mt-6">📍</p>
+                <p class="text-center">Based in</p>
+                <h1 class="text-center text-[19px] text-white font-medium">San Francisco</h1>
+            </div>
+
+
+            <div
+                class="rounded-xl h-35 w-full  md:rounded-3xl md:col-start-5 bg-gradient-to-br from-fuchsia-600 to-violet-600 ">
+                <h1 class="text-center text-3xl font-bold mt-6">+1</h1>
+                <p class="text-center text-[19px] font-semibold">years</p>
+                <p class="text-center">experience</p>
+            </div>
+            <div
+                class="rounded-xl h-35 w-full  md:rounded-3xl md:col-start-6 bg-gradient-to-br from-[#BD48F9] to-violet-600 ">
+                <p class="text-center text-4xl mt-4">☕</p>
+                <h1 class="text-center text-[20px] font-bold mt-1">897</h1>
+                <p class="text-center">Cups of coffee</p>
+
+            </div>
+
+
+            <div
+                class="rounded-xl h-65 w-full md:rounded-3xl md:col-span-3 p-5 md:row-span-2 md:col-start-3 md:row-start-2 bg-gradient-to-bl from-fuchsia-600 via-violet-700  to-purple-600">
+                <h1 class="mb-[-30px] font-bold text-white tracking-widest  text-2xl">Tech Stack</h1>
+                <div class="flex flex-col h-full justify-end">
+
+                    <div class="flex w-full space-x-3">
+                        <div class="bg-gray-300/25 w-1/3 h-20 text-center rounded-xl  backdrop-blur-2xl ">
+                            <p class="text-2xl mt-3 text-center"> ✡️</p>
+                            <p class="text-[19px] font-medium text-center">React</p>
+                        </div>
+                        <div class="bg-gray-300/25 w-1/3 h-20 text-center rounded-xl  backdrop-blur-2xl ">
+                            <p class="text-2xl mt-3 text-center"> 🐍</p>
+                            <p class="text-[19px] font-medium text-center">Python</p>
+                        </div>
+                        <div class="bg-gray-300/25 w-1/3 h-20 text-center rounded-xl  backdrop-blur-2xl ">
+                            <p class="text-2xl mt-3 text-center"> 📘</p>
+                            <p class="text-[19px] font-medium text-center">Node.js</p>
+                        </div>
+                    </div>
+                    <div class="flex w-full mt-2 space-x-3">
+                        <div class="w-1/3 h-20 text-center rounded-xl  bg-gray-700/25 backdrop-blur-2xl">
+                            <p class="text-2xl mt-3 text-center"> 🐬</p>
+                            <p class="text-[19px] font-medium text-center">MySQL</p>
+                        </div>
+                        <div class="w-1/3 h-20 text-center rounded-xl  bg-gray-700/25 backdrop-blur-2xl">
+                             <p class="text-2xl mt-3 text-center"> 🔥</p>
+                        <p class="text-[19px] font-medium text-center">Firebase</p>
+                        </div>
+                       
+                        <div class="w-1/3 h-20 text-center rounded-xl  bg-gray-700/25 backdrop-blur-2xl">
+                            <p class="text-2xl mt-3 text-center"> 🐳</p>
+                            <p class="text-[19px] font-medium text-center">Docker</p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+
+            <div
+                class="rounded-xl h-45 md:h-65 w-full  md:rounded-3xl md:row-span-2 md:col-start-6 md:row-start-2 bg-gradient-to-br from-violet-600 to-fuchsia-600 ">
+                <p class="text-center text-3xl mt-9 md:mt-6">⭐</p>
+                <h1 class="text-center text-2xl font-semibold">1.2K</h1>
+                <p class="text-center">GitHub Stars</p>
+
+            </div>
+            <div
+                class="flex-column p-5 justify-between items-center rounded-xl h-45 w-full   md:rounded-3xl md:col-span-2 md:row-start-4 bg-gradient-to-bl from-purple-600 to-violet-700">
+                <h1 class="text-[19px] mt-2 mb-3 font-semibold">Current Project</h1>
+                <p class="mb-2 text-[15px]">Building an AI-powered task management <br> app </p>
+
+
+
+                <div class="flex items-center space-x-3 w-full">
+                    <div class="flex-1 h-2 rounded-full bg-gray-300/25 overflow-hidden">
+                        <div class="h-2 rounded-full  opacity-100 z-10 bg-white" style="width: 50%"></div>
+                       
+                    </div>
+
+                </div>
+
+
+            </div>
+            <div
+                class="rounded-xl h-45 w-full  md:rounded-3xl md:col-start-3 md:row-start-4 bg-gradient-to-bl from-purple-600 to-violet-600 ">
+                <p class="text-center mt-9 text-3xl">📚</p>
+                <p class="text-center text-[19px] font-medium mt-2">Learning</p>
+
+                <p class="text-center ">rust</p>
+
+            </div>
+            <div
+                class="rounded-xl h-45 w-full p-6 md:rounded-3xl md:col-span-2 md:col-start-4 md:row-start-4 bg-gradient-to-br from-violet-600 to-purple-600  ">
+                <h1 class="text-[19px] mb-5 font-semibold">Connect</h1>
+                <p>💼 Linkedln </p>
+                <p>🐱 GitHub </p>
+                <p>🐦‍⬛ Twitter</p>
+            </div>
+            <div
+                class="rounded-xl h-45 w-full  md:rounded-3xl md:col-start-6 md:row-start-4 bg-gradient-to-br from-purple-600 to-violet-600 ">
+                <p class="text-4xl text-center mb-3 mt-9">🕐</p>
+                <h1 class="text-center text-[19px] font-bold">2:30 PM</h1>
+                <p class="text-center">sleep</p>
+            </div>
+            <div
+                class="rounded-xl h-35 w-full p-5 md:rounded-3xl md:col-span-3 md:row-start-5  bg-gradient-to-bl from-purple-600 to-violet-600 ">
+                <h1 class="text-[19px]  mb-3 font-semibold">Latest Achievement</h1>
+                <p class="font-medium mb-2">🏆 Won "Best Innovation" at techHack 2024</p>
+                <p>Built a real-time collaboration tool in 48 hours</p>
+            </div>
+            <div
+                class="rounded-xl h-35 w-full p-5 md:rounded-3xl md:col-start-4 md:row-start-5 bg-gradient-to-br from-purple-600 to-violet-600 ">
+                <p class="text-center text-4xl">🎮</p>
+                <h1 class="text-center text-[19px] font-medium">Gamer</h1>
+                <p class="text-center ">in free time</p>
+            </div>
+            <div
+                class="rounded-xl p-5 h-35 w-full  md:rounded-3xl md:col-span-2 md:col-start-5 md:row-start-5 bg-gradient-to-bl from-purple-600 to-violet-600 ">
+                <h1 class="text-center text-[19px] font-medium mb-3">"Code is poetry written in logic"</h1>
+                <p class="text-center">- personal motto</p>
+            </div>
         </div>
     </main>
 
